--- a/calc_graph_vector.ipynb
+++ b/calc_graph_vector.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,15 +30,15 @@
     "\n",
     "    #=== parameters\n",
     "    N_rep_louvain = 10   # number of Louvain algorithm repetitions\n",
-    "    gamma = 10           # Louvain resolution parameter\n",
     "    N_measures = 10      # number of graph measures\n",
+    "    gamma = 1            # Louvain resolution parameter\n",
     "\n",
     "    graph_measures = np.zeros([ len(thresholds), N_measures ])      # create empty output matrix\n",
     "    for thr in range(len(thresholds)) : \n",
     "        #=== thresholding \n",
     "        A = bct.threshold_proportional( A_raw, p=thresholds[thr], copy=True );\n",
     "        A[np.nonzero(A<0)] = 0                                      # ensure only positive weights\n",
-    "        M_act = A[np.nonzero(A>0)].shape[0]                         # actual number of nonzero connections\n",
+    "        M_act = A[np.nonzero(A>0)].shape[0] / 2                     # actual number of nonzero connections\n",
     "        #=== calculate measures\n",
     "        #-- mean connection strenght \n",
     "        S = np.sum(A)/M_act\n",
@@ -72,18 +72,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Find out subjects with all files ( 4 sessions $\\times$ 5 atlases $\\times$ 4 models )"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "thresholds = [ 0.05, 0.075, 0.1, 0.125, 0.15 ]\n",
-    "\n",
-    "for filename in files\n",
-    "    #=== do the job\n",
-    "    calc_graph_vector(filename,thresholds)"
+    "import numpy as np\n",
+    "#=== loop over files\n",
+    "sub_counter = np.zeros(57)  # stores number of files per subjects\n",
+    "for sub in range(1,57) :\n",
+    "    for ses in range(1,5) :\n",
+    "        for model in ['cor','par','cov','pre'] :\n",
+    "            for atlas in ['pow','aal','dos','har','mul'] :\n",
+    "                filename = 'data/matKFLB_sub' + str(sub).zfill(2) + '_ses' + str(ses) + '_' + atlas + '_' + model + '.txt'\n",
+    "                if os.path.isfile(filename)==True :               # if file exists\n",
+    "                    sub_counter[sub-1] = sub_counter[sub-1] + 1 \n",
+    "#=== filter complete subjects\n",
+    "sub_complete = np.nonzero(sub_counter==80)[0] + 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running calc_graph_vector for data/matKFLB_sub01_ses1_pow_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses1_aal_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses1_dos_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses1_har_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses1_mul_cor.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "#=== define thresholds\n",
+    "thresholds = [ 0.05, 0.075, 0.1, 0.125, 0.15 ]\n",
+    "#=== calculate graph measures for all files\n",
+    "for sub in list(sub_complete) :\n",
+    "    for ses in range(1,5) :\n",
+    "        for model in ['cor','par','cov','pre'] :\n",
+    "            for atlas in ['pow','aal','dos','har','mul'] :\n",
+    "                filename = 'data/matKFLB_sub' + str(sub).zfill(2) + '_ses' + str(ses) + '_' + atlas + '_' + model + '.txt'\n",
+    "                #=== do the job\n",
+    "                print('Running calc_graph_vector for ' + filename)\n",
+    "                calc_graph_vector(filename,thresholds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
