moved calc_graph_vector to identipy

--- a/calc_graph_vector.ipynb
+++ b/calc_graph_vector.ipynb
@@ -4,83 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Calculate graph vectors $\\vec{G}=\\left[S_{mean},\\sigma_S,Q,P_{mean},C_{mean},T,A,E^{glo},E^{loc}_{mean},EC_{mean}\\right]$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calc_graph_vector( filename, thresholds ) :\n",
-    "    #-------------------------------------------------------------------#   \n",
-    "    #    Input arguments:                                               #\n",
-    "    #        filename   – name of file containing connectivity matrix   #\n",
-    "    #        thresholds – list containing thresholds of interest        #\n",
-    "    #-------------------------------------------------------------------#\n",
-    "    #=== import libraries\n",
-    "    import numpy as np\n",
-    "    import bct\n",
-    "\n",
-    "    #=== load matrix \n",
-    "    A_raw = np.loadtxt(filename)\n",
-    "    N = A_raw.shape[0]   # number of nodes\n",
-    "    M_sat = N*(N-1)/2    # max number of connections \n",
-    "\n",
-    "    #=== parameters\n",
-    "    N_rep_louvain = 10   # number of Louvain algorithm repetitions\n",
-    "    N_measures = 10      # number of graph measures\n",
-    "    gamma = 1            # Louvain resolution parameter\n",
-    "\n",
-    "    graph_measures = np.zeros([ len(thresholds), N_measures ])      # create empty output matrix\n",
-    "    for thr in range(len(thresholds)) : \n",
-    "        #=== thresholding \n",
-    "        A = bct.threshold_proportional( A_raw, p=thresholds[thr], copy=True );\n",
-    "        A[np.nonzero(A<0)] = 0                                      # ensure only positive weights\n",
-    "        M_act = A[np.nonzero(A>0)].shape[0] / 2                     # actual number of nonzero connections\n",
-    "        #=== calculate measures\n",
-    "        #-- mean connection strenght \n",
-    "        S = np.sum(A)/M_act\n",
-    "        #-- connection strenght std\n",
-    "        Svar = np.std(A[np.nonzero(A)])\n",
-    "        #-- modularity\n",
-    "        [M,Q] = bct.modularity_louvain_und(A, gamma)\n",
-    "        for i in range(N_rep_louvain) :\n",
-    "            [Mt,Qt] = bct.modularity_louvain_und(A, gamma)\n",
-    "            if Qt > Q :\n",
-    "                Q = Qt\n",
-    "                M = Mt\n",
-    "        #-- participation coefficient\n",
-    "        P = np.mean(bct.participation_coef_sign(A, M))\n",
-    "        #-- clustering \n",
-    "        C = np.mean(bct.clustering_coef_wu(A))\n",
-    "        #-- transitivity \n",
-    "        T = bct.transitivity_wu(A)\n",
-    "        #-- assortativity\n",
-    "        Asso = bct.assortativity_wei(A)\n",
-    "        #-- global & local efficiency \n",
-    "        Eglo = bct.efficiency_wei(A)\n",
-    "        Eloc = np.mean(bct.efficiency_wei(A, local=True))\n",
-    "        #-- mean eigenvector centralit\n",
-    "        Eig = np.mean(bct.eigenvector_centrality_und(A))\n",
-    "        #=== write vector to matrix\n",
-    "        graph_measures[thr] = [ S, Svar, Q, P, C, T, Asso, Eglo, Eloc, Eig ]\n",
-    "\n",
-    "    #=== save results to file\n",
-    "    np.savetxt( filename[:-4]+'_GV.txt', graph_measures )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### $\\vec{G}=\\left[S_{mean},\\sigma_S,Q,P_{mean},C_{mean},T,A,E^{glo},E^{loc}_{mean},EC_{mean}\\right]$\n",
     "### Find out subjects with all files ( 4 sessions $\\times$ 5 atlases $\\times$ 4 models )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,20 +33,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running calc_graph_vector for data/matKFLB_sub01_ses1_pow_cor.txt\n",
-      "Running calc_graph_vector for data/matKFLB_sub01_ses1_aal_cor.txt\n",
-      "Running calc_graph_vector for data/matKFLB_sub01_ses1_dos_cor.txt\n",
-      "Running calc_graph_vector for data/matKFLB_sub01_ses1_har_cor.txt\n",
-      "Running calc_graph_vector for data/matKFLB_sub01_ses1_mul_cor.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from identipy import calc_graph_vector\n",
     "#=== define thresholds\n",
     "thresholds = [ 0.05, 0.075, 0.1, 0.125, 0.15 ]\n",
     "#=== calculate graph measures for all files\n",
@@ -129,13 +48,6 @@
     "                print('Running calc_graph_vector for ' + filename)\n",
     "                calc_graph_vector(filename,thresholds)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
