--- a/calc_graph_vector.ipynb
+++ b/calc_graph_vector.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,16 +33,110 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running calc_graph_vector for data/matKFLB_sub01_ses1_har_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses1_pow_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses1_aal_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses1_dos_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses1_mul_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses1_har_par.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses1_pow_par.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses1_aal_par.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses1_dos_par.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses1_mul_par.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses1_har_cov.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses1_pow_cov.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses1_aal_cov.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses1_dos_cov.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses1_mul_cov.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses1_har_pre.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses1_pow_pre.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses1_aal_pre.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses1_dos_pre.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses1_mul_pre.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses2_har_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses2_pow_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses2_aal_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses2_dos_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses2_mul_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses2_har_par.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses2_pow_par.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses2_aal_par.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses2_dos_par.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses2_mul_par.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses2_har_cov.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses2_pow_cov.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses2_aal_cov.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses2_dos_cov.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses2_mul_cov.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses2_har_pre.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses2_pow_pre.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses2_aal_pre.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses2_dos_pre.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses2_mul_pre.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses3_har_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses3_pow_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses3_aal_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses3_dos_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses3_mul_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses3_har_par.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses3_pow_par.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses3_aal_par.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses3_dos_par.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses3_mul_par.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses3_har_cov.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses3_pow_cov.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses3_aal_cov.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses3_dos_cov.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses3_mul_cov.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses3_har_pre.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses3_pow_pre.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses3_aal_pre.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses3_dos_pre.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses3_mul_pre.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses4_har_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses4_pow_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses4_aal_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses4_dos_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses4_mul_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses4_har_par.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses4_pow_par.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses4_aal_par.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses4_dos_par.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses4_mul_par.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses4_har_cov.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses4_pow_cov.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses4_aal_cov.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses4_dos_cov.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses4_mul_cov.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses4_har_pre.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses4_pow_pre.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses4_aal_pre.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses4_dos_pre.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub01_ses4_mul_pre.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub02_ses1_har_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub02_ses1_pow_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub02_ses1_aal_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub02_ses1_dos_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub02_ses1_mul_cor.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub02_ses1_har_par.txt\n",
+      "Running calc_graph_vector for data/matKFLB_sub02_ses1_pow_par.txt\n"
+     ]
+    }
+   ],
    "source": [
     "from identipy import calc_graph_vector\n",
     "#=== define thresholds\n",
-    "thresholds = [ 0.05, 0.075, 0.1, 0.125, 0.15 ]\n",
+    "thresholds = [ 0.175, 0.2, 0.225, 0.25 ]\n",
     "#=== calculate graph measures for all files\n",
     "for sub in list(sub_complete) :\n",
     "    for ses in range(1,5) :\n",
     "        for model in ['cor','par','cov','pre'] :\n",
-    "            for atlas in ['pow','aal','dos','har','mul'] :\n",
+    "            for atlas in ['har','pow','aal','dos','mul'] :\n",
     "                filename = 'data/matKFLB_sub' + str(sub).zfill(2) + '_ses' + str(ses) + '_' + atlas + '_' + model + '.txt'\n",
     "                #=== do the job\n",
     "                print('Running calc_graph_vector for ' + filename)\n",
